QuotesApp/app/kuber/back-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: back
  name: back
  namespace: quotesapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.network/myapp: "true"
      io.kompose.service: back
  template:
    metadata:
      labels:
        io.kompose.network/myapp: "true"
        io.kompose.service: back
    spec:
      containers:
      - image: nazhu21/quotes-back:v4
        name: api
        ports:
        - containerPort: 3000
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: back
  name: back-svc
  namespace: quotesapp
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: back
status:
  loadBalancer: {}
