QuotesApp/app/kuber/data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: data
  name: db
  namespace: quotesapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.network/myapp: "true"
      io.kompose.service: data
  template:
    metadata:
      labels:
        io.kompose.network/myapp: "true"
        io.kompose.service: data
    spec:
      containers:
      - env:
        - name: MYSQL_ALLOW_EMPTY_PASSWORD
          value: "yes"
        - name: MYSQL_DATABASE
          value: mydatabase
        - name: MYSQL_PASSWORD
          value: root
        - name: MYSQL_ROOT_PASSWORD
          value: root
        image: nazhu21/quotes-data:v2
        name: data
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: data
  name: db-svc
  namespace: quotesapp
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: data
status:
  loadBalancer: {}
