QuotesApp/app/kuber/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: front
  name: front
  namespace: quotesapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.network/myapp: "true"
      io.kompose.service: front
  template:
    metadata:
      labels:
        io.kompose.network/myapp: "true"
        io.kompose.service: front
    spec:
      containers:
      - image: nazhu21/quotes-front:v2
        name: front
        ports:
        - containerPort: 3001
        resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: front
  name: front-svc
  namespace: quotesapp
spec:
  type: NodePort
  ports:
  - name: "3001"
    port: 3001
    targetPort: 3001
    nodePort: 30001
  selector:
    io.kompose.service: front
status:
  loadBalancer: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: quotesapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/whitelist-source-range: "24.1.39.220"
spec:
  ingressClassName: nginx
  rules:
  - host: quotesapp.project-312.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-svc
            port:
              number: 3001
